Moving the fingurprints to Store/actions. Renaming the moving logos and fixing the UI  on mobile

--- a/src/AppContainer/MovingLogos/MovingLogos.css
+++ b/src/AppContainer/MovingLogos/MovingLogos.css
@@ -7,7 +7,7 @@
     overflow: hidden;
   }
   
-  .index-page .squares {
+   .squares {
     -webkit-animation: move-left-right 1s infinite;
     animation: move-left-right 1s infinite;
     /* background-color: #f5a623; */
@@ -23,7 +23,7 @@
     pointer-events: none;
   }
   
-  .index-page .squares.square1 {
+   .squares.square1 {
     -webkit-animation: move-left-right 4s infinite;
             animation: move-left-right 4s infinite;
     height: 300px;
@@ -31,7 +31,7 @@
     opacity: 0.8;
     left: 0px;
     top: 0px; }
-  .index-page .squares.square2 {
+   .squares.square2 {
     -webkit-animation: move-left-right 6s infinite;
     animation: move-left-right 6s infinite;
     height: 400px;
@@ -39,7 +39,7 @@
     opacity: 0.3;
     right: -11%;
     top: -120px; }
-  .index-page .squares.square3 {
+   .squares.square3 {
     -webkit-animation: move-left-right 5s infinite;
             animation: move-left-right 5s infinite;
     height: 200px;
@@ -47,7 +47,7 @@
     opacity: 0.1;
     left: -5%;
     top: 760px; }
-  .index-page .squares.square4 {
+   .squares.square4 {
     -webkit-animation: move-left-right 10s infinite;
             animation: move-left-right 10s infinite;
     height: 70px;
@@ -56,7 +56,7 @@
     right: 27%;
     top: 530px;
 }
-  .index-page .squares.square5 {
+   .squares.square5 {
     -webkit-animation: move-left-right 6s infinite;
     animation: move-left-right 6s infinite;
     height: 180px;
@@ -64,7 +64,7 @@
     opacity: 0.4;
     left: 3%;
     top: 550px;}
-  .index-page .squares.square6 {
+   .squares.square6 {
     -webkit-animation: move-left-right 9s infinite;
     animation: move-left-right 9s infinite;
     left: 20%;
@@ -72,7 +72,7 @@
     height: 100px;
     width: 100px;
     opacity: 0.05; }
-  .index-page .squares.square7 {
+   .squares.square7 {
     -webkit-animation: move-left-right 3s infinite;
     animation: move-left-right 3s infinite;
     width: 300px;
@@ -104,3 +104,50 @@
       -webkit-transform: translateX(-10px);
               transform: translateX(-10px); } }
   
+
+              @media screen and (max-width: 800px) {
+                .squares.square1 {
+                  height: 80px;
+                  width: 80px;
+                }
+
+                .squares.square2{
+                  height: 120px;
+                  width: 120px;
+                  right: -20px;
+                  top: 50px;
+                  opacity: .15;
+                }
+
+                .squares.square3 {
+                  -webkit-animation: move-left-right 5s infinite;
+                  animation: move-left-right 5s infinite;
+                  height: 200px;
+                  width: 200px;
+                  opacity: 0.1;
+                  left: -70px;
+                  top: 330px;
+                }
+
+                .squares.square4,
+                .squares.square5{
+                  display: none;
+                }
+
+                .squares.square6 {
+                  -webkit-animation: move-left-right 9s infinite;
+                  animation: move-left-right 9s infinite;
+                  left: unset;
+                  top: 330px;
+                  height: 100px;
+                  width: 100px;
+                  opacity: 0.05;
+                  right: -15px;
+                }
+
+                .squares.square7 {
+                  top: 570px;
+                }
+              
+              }
+            
