--- a/src/Organisms/Popup/Popup.css
+++ b/src/Organisms/Popup/Popup.css
@@ -25,6 +25,7 @@
     opacity: 1;
     pointer-events: all;
     transform: translateY(0);
+    z-index: 3;
 }
 
 @media screen and (max-width: 800px) {
